HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumDuplicateDiscriminant/Source/Main.uv
//! Rejected enum specimen for duplicate discriminant values.

public enum DuplicateDiscriminantPayload {
    First = 1
    Second = 1
}
